test/corpus/constants.txt
============================
simple struct
============================

struct AnyStruct {
    a: u256,
    b: u32
}

-----------------------------

(source_file
    (struct
        (identifier)
        (identifier)
        (primitive_type
            (integer_type))
        (identifier)
        (primitive_type
            (integer_type))))


============================
simple const
============================

const EXAMPLE = 100;

-----------------------------

(source_file
    (const
        (identifier)
        (literal_expression
            (integer_literal))))
